#668 issue fix for the overflow of metadata and vertical scroll in the credit popup

--- a/player/public/css/app/style.css
+++ b/player/public/css/app/style.css
@@ -586,6 +586,9 @@ ion-popover-view.fit ion-content {
 
 .credit-body-icon-font {
     width: 82%;
+    overflow-y:scroll;
+    overflow-x: hidden; 
+   word-wrap: break-word;
     height: 75%;
     left: 10%;
     position: absolute;
